hphp/test/zend/good/Zend/tests/foreach_list_004.php.expectf

Fatal error: Cannot use empty list in %s/foreach_list_004.php on line 5
